--- a/css/main.css
+++ b/css/main.css
@@ -566,6 +566,11 @@ a:visited {
     margin-bottom: .3em;
     color: black; }
 
+#funky_prize img {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1.5em; }
+
 @media (max-width: 768px) {
   section {
     padding: 0 20px; }
